--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/uniqid": "^5.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uniqid": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
