--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
+    "@types/socket.io": "^2.1.10",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
