--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,14 @@
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/socket.io": "^2.1.10",
+    "@types/socket.io-client": "^1.4.33",
     "@types/uniqid": "^5.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "typescript": "^3.7.5",
     "uniqid": "^5.2.0"
   },
