--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-string-replace": "^0.4.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "typescript": "^3.7.5",
